tripinsights-tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
  labels:
    api: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: trips
        image: registryhdw3309.azurecr.io/tripinsights/tripviewer:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: tripviewer
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-frontend
  namespace: web
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: tripviewer
