tripinsights-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
  labels:
    api: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: trips
        image: registryhdw3309.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: userprofile
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-backend
  namespace: api
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: userprofile
